<?xml version="1.0"?>
<package>
  <name>kartech_linear_actuator_msgs</name>
  <version>1.4.0</version>
  <description>The kartech_linear_actuator_msgs package</description>
  <maintainer email="support@autonomoustuff.com">AutonomouStuff Software Team</maintainer>
  <license>Closed Source</license>
  <author email="jwhitley@autonomoustuff.com">Joshua Whitley</author>
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
</package>
