<?xml version="1.0"?>
<package format="2">
  <name>kartech_linear_actuator_msgs</name>
  <version>2.0.1</version>
  <description>The kartech_linear_actuator_msgs package</description>
  <license>GPLv3</license>

  <maintainer email="support@autonomoustuff.com">AutonomouStuff Software Team</maintainer>
  <author email="jwhitley@autonomoustuff.com">Joshua Whitley</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <depend>std_msgs</depend>
  <exec_depend>message_runtime</exec_depend>
</package>
