<?xml version="1.0"?>
<package format="2">
  <name>mobileye_560_660_msgs</name>
  <version>2.0.1</version>
  <description>Message definitions for the Mobileye 560/660</description>
  <license>GPLv3</license>

  <maintainer email="software@autonomoustuff.com">AutonomouStuff Software Team</maintainer>
  <author email="jwhitley@autonomoustuff.com">Josh Whitley</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <depend>std_msgs</depend>
  <exec_depend>message_runtime</exec_depend>
</package>
