<?xml version="1.0"?>
<package format="2">
  <name>neobotix_usboard_msgs</name>
  <version>2.2.0</version>
  <description>neobotix_usboard package</description>
  <license>MIT</license>

  <maintainer email="software@autonomoustuff.com">AutonomouStuff Software Team</maintainer>
  <author email="srustan@autonomoustuff.com">Sam Rustan</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <depend>std_msgs</depend>
  <exec_depend>message_runtime</exec_depend>
</package>
