<?xml version="1.0"?>
<package format="2">
  <name>neobotix_usboard_msgs</name>
  <version>2.3.0</version>
  <description>neobotix_usboard package</description>
  <license>MIT</license>

  <url type="website">http://wiki.ros.org/neobotix_usboard_msgs</url>
  <url type="repository">https://github.com/astuff/astuff_sensor_msgs</url>
  <url type="bugtracker">https://github.com/astuff/astuff_sensor_msgs/issues</url>

  <maintainer email="software@autonomoustuff.com">AutonomouStuff Software Team</maintainer>
  <author email="srustan@autonomoustuff.com">Sam Rustan</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <depend>std_msgs</depend>
  <exec_depend>message_runtime</exec_depend>
</package>
