<?xml version="1.0"?>
<package format="2">
  <name>pacmod_msgs</name>
  <version>2.3.0</version>
  <description>Message definition files for the PACMod driver</description>
  <license>MIT</license>

  <url type="website">http://wiki.ros.org/pacmod_msgs</url>
  <url type="repository">https://github.com/astuff/astuff_sensor_msgs</url>
  <url type="bugtracker">https://github.com/astuff/astuff_sensor_msgs/issues</url>

  <maintainer email="software@autonomoustuff.com">AutonomouStuff Software Team</maintainer>
  <author email="jwhitley@autonomoustuff.com">Josh Whitley</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <depend>std_msgs</depend>
  <exec_depend>message_runtime</exec_depend>
</package>
